# AHRS

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/: esp_idf_lib_helpers  i2cdev  mpu6050  mpu9250
components/ahrs/: CMakeLists.txt
components/ahrs/include/: ahrs.h  gsl_quaternion_float.h  math_utils.h
components/ahrs/src/: ahrs.c  gsl_quaternion_float.c  math_utils.c
components/buffer/: CMakeLists.txt  buffer.c  buffer.c.bak
components/buffer/include/: buffer.h  buffer.h.bak
components/buffer/test/: CMakeLists.txt  test_buffer.c  test_buffer.c.back
components/gsl/: CMakeLists.txt
components/gsl/include/gsl/: gsl_inline.h  gsl_sf_alf.h  gsl_version.h
components/gsl/lib/cmake/gsl-2.7/: gsl-config-version.cmake  gsl-config.cmake  gsl-targets-noconfig.cmake  gsl-targets.cmake
components/gsl/lib/pkgconfig/: gsl.pc
components/logging/: CMakeLists.txt  logging.c
components/partitionLog/: CMakeLists.txt  partitionLog.c
components/partitionLog/include/: partitionLog.h
components/tictoc/: CMakeLists.txt  tictoc.c
logs/: magnetometer.mlx  plotResults.mlx  split.sh
main/: CMakeLists.txt  main.c
partitions/: avion.stl  body.stl  dataProcessing.mlx  gmon.out  partitions.csv  read_partitions.sh  visualizer (SFConflict David 2025-03-16-21-06-38).mlx  visualizer.mlx  write_partitions.sh
partitions/calibration/: A_mag_cal.bin.bak  b_mag_cal.bin.bak  layout.csv
partitions/storage/: layout.csv
unity-app/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
unity-app/main/: CMakeLists.txt  test_app_main.c
(+1 files in other folders)
